--- a/README
+++ b/README
@@ -17,3 +17,6 @@ StoryWeave is an AI-based website that helps users generate creative stories bas
 1️⃣ Clone the repository
 ```sh
 git clone https://github.com/Eunice-Joshi/StoryWeave.git
+
+Website:
+https://storyweave-lac.vercel.app/
